# distributed-resource-optimization

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
distributed_resource_optimization/: __init__.py
distributed_resource_optimization/algorithm/: core.py
distributed_resource_optimization/algorithm/admm/: __init__.py  consensus_admm.py  core.py  flex_actor.py  sharing_admm.py
distributed_resource_optimization/algorithm/consensus/: __init__.py  averaging.py  economic_dispatch.py
distributed_resource_optimization/algorithm/diffusion/: __init__.py  diffusion.py  economic_dispatch.py
distributed_resource_optimization/algorithm/heuristic/cohda/: __init__.py  core.py  decider.py
distributed_resource_optimization/carrier/: __init__.py  core.py  mango.py  simple.py
distributed_resource_optimization/misc/: util.py
docs/: requirements.txt
docs/source/: conf.py  development.rst  getting_started.rst  index.rst  installation.rst
docs/source/algorithms/: admm.rst  cohda.rst  consensus.rst
docs/source/api_ref/: index.rst
docs/source/carrier/: mango.rst  simple.rst
docs/source/howtos/: custom_algorithm.rst  custom_carrier.rst
docs/source/tutorials/: energy_dispatch.rst  schedule_coordination.rst
tests/: carrier.py  test_simple_carrier.py
tests/admm/: test_consensus_admm.py  test_sharing_admm.py
tests/cohda/: test_cohda.py  test_cohda_sc.py  test_local_search_decider.py
tests/consensus/: test_averaging.py  test_consensus_sc.py  test_economic_dispatch.py
